<resources>
    <string name="app_name">Big Pig</string>
    <string name="player_1_name_label">Player 1</string>
    <string name="player_1_name_text">Player 1 Name</string>
    <string name="player_2_name_label">Player 2</string>
    <string name="player_2_name_text">Player 2 Name</string>
    <string name="player_1_score_label">Player 1 Score</string>
    <string name="player_1_score_text">""</string>
    <string name="player_2_score_label">Player 2 Score</string>
    <string name="player_2_score_text">""</string>
    <string name="turn_name_text">""</string>
    <string name="turn_name_label"> \'s Turn</string>
    <string name="turn_points_label">Points for this Turn</string>
    <string name="turn_points">""</string>
    <string name="roll_die_button">Roll Die</string>
    <string name="end_turn_button">End Turn</string>
    <string name="new_game_button">New Game</string>
    <string name="_8_side_die_image">8_side_die_image</string>
    <string name="winner_text">""</string>
</resources>
