<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/player1EditText"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="650dp"
        android:hint="@string/player_1_name_text"
        android:inputType="text"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1NameLabel"
        android:autofillHints="" />

    <EditText
        android:id="@+id/player2EditText"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="650dp"
        android:hint="@string/player_2_name_text"
        android:inputType="text"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2NameLabel"
        android:autofillHints="" />

    <TextView
        android:id="@+id/player1ScoreLabel"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="61dp"
        android:text="@string/player_1_score_label"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/player1EditText"
        app:layout_constraintTop_toBottomOf="@+id/player1EditText"
        app:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/player2ScoreLabel"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="61dp"
        android:text="@string/player_2_score_label"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/player2EditText"
        app:layout_constraintTop_toBottomOf="@+id/player2EditText" />

    <Button
        android:id="@+id/rollDieButton"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="79dp"
        android:onClick="play"
        android:text="@string/roll_die_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/endTurnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endTurnButton" />

    <Button
        android:id="@+id/endTurnButton"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="20dp"
        android:text="@string/end_turn_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginBottom="70dp"
        android:text="@string/new_game_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dieImageView" />

    <ImageView
        android:id="@+id/dieImageView"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/_8_side_die_image"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/die8side8" />

    <TextView
        android:id="@+id/player1NameLabel"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/player_1_name_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/player2NameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2NameLabel"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="5dp"
        android:text="@string/player_2_name_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player2EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player1NameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/turnPoints"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginBottom="180dp"
        android:text="@string/turn_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/turnPointsLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="29dp"
        android:text="@string/turn_points_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/turnPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dieImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>